--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,6 @@
   min-width: 1100px;
   max-width: 1600px;
   font-family: "Inter", Arial, sans-serif;
-  font-size: 36px;
-  line-height: 20;
+  font-size: 16px;
+  line-height: 20px;
 }
