--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,163 @@
 .page {
   margin: 0 auto;
-  min-width: 1100px;
-  max-width: 1600px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+  box-sizing: border-box;
+  background-image: url(/images/background_header.svg);
+  background-size: cover;
+  background-position: center;
+}
+
+.header {
+  padding: 30px 80px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__logo {
+  width: 105px;
+  height: 39px;
+  align-self: center;
+}
+
+.nav__links {
+  margin: 0;
+  display: flex;
+  list-style-type: none;
+  padding-right: 75px;
+  gap: 20px;
+  align-self: center;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.nav__link {
+  color: #000;
+  text-decoration: none;
+}
+
+.header__title {
+  margin: 183px 0 0;
+  max-width: 729px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
+  z-index: 1;
+}
+
+.header__span-accent {
+  display: block;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: -0.6px;
+  color: #000;
+}
+
+.header__description {
+  margin: 0;
+  max-width: 683px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-weight: 500;
+  line-height: 30px;
+  z-index: 1;
+}
+
+.header__image {
+  width: 646px;
+  height: 568px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+}
+
+.header__footer {
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  font-weight: 500;
+  color: #838383;
+}
+
+.header__paragraph {
+  margin: 0;
+}
+
+.recipes {
+  padding: 100px 80px;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  background-color: #0a2750;
+  background-image: url(/images/background_recipes.svg);
+  background-position: center;
+  background-size: cover;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.recipes__title {
+  margin: 0;
+  padding-bottom: 24px;
+  max-width: 580px;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+  color: #fff;
+}
+
+.recipes__subtitle {
+  margin: 0;
+  max-width: 438px;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
+}
+
+.recipes__videos {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  column-gap: 40px;
+}
+
+.recipes__videos-section {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.recipes__video {
+  padding-bottom: 20px;
+  width: 480px;
+  height: 273px;
+  border-style: none;
+}
+
+.recipes__video-captions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.recipes__video-caption {
+  margin: 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
 }
