project 2 stage 2 links and iframe class naming corrections

--- a/pages/index.css
+++ b/pages/index.css
@@ -144,7 +144,7 @@
   flex-direction: column;
 }
 
-.recipes__video {
+.recipes__iframe {
   padding-bottom: 20px;
   width: 480px;
   height: 273px;
