--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -21,6 +21,7 @@
 
 .footer__social-heading {
   margin: 0 0 20px;
+  font-size: 16px;
   font-weight: bold;
   color: #fff;
 }
@@ -35,20 +36,25 @@
   padding: 0 0 16px;
   color: #fff;
   display: flex;
+  flex-direction: column;
   gap: 10px;
-  transition: color 0.2s;
-}
-
-.footer__list-item:hover {
-  color: #c1c1c1;
 }
 
 .footer__list-item:last-of-type {
   padding: 0;
 }
 
-.footer__list-item-text {
-  margin: 0;
+.footer__list-link {
+  margin: auto 0;
+  color:#fff;
+  text-decoration: none;
+  display: flex;
+  gap: 10px;
+  transition: color 0.2s;
+}
+
+.footer__list-link:hover {
+  color: #c1c1c1;
 }
 
 .footer__social-icon {
