--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden;
 }
 
 .menu__title {
@@ -28,9 +27,10 @@
 }
 
 .menu__cards {
+  margin-bottom: 100px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 0 100px;
+  gap: 100px; 
 }
