--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,10 +1,7 @@
 .recipes {
-  padding: 100px 80px;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
+  padding: 100px 80px 0;
   background-color: #0a2750;
-  background-image: url(/images/background_recipes.svg);
+  background-image: url(../images/background_recipes.svg);
   background-position: center;
   background-size: cover;
   box-sizing: border-box;
@@ -33,9 +30,9 @@
 
 .recipes__videos {
   margin: auto;
+  padding-bottom: 215px;
   display: flex;
   flex-wrap: wrap;
-  max-width: 1000px;
   column-gap: 40px;
 }
 
@@ -46,13 +43,14 @@
 }
 
 .recipes__iframe {
-  padding-bottom: 20px;
+  padding: 80px 0 24px;
   width: 480px;
   height: 273px;
   border-style: none;
 }
 
 .recipes__video-captions {
+  margin: 0;
   display: flex;
   justify-content: space-between;
 }
