--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -1,10 +1,7 @@
 .reservation {
   padding: 100px 0 120px 0;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
   background-color: #d9e7ff;
-  background-image: url(/images/background_reservation.svg);
+  background-image: url(../images/background_reservation.svg);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -15,4 +12,8 @@
   font-size: 44px;
   line-height: 52px;
   text-align: center;
-}
+  }
+
+  .reservation__form {
+    margin: 0 auto;
+  }
