--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,5 +1,5 @@
 .form {
-max-width: 385px;
+  max-width: 385px;
 }
 
 .form__fieldset {
@@ -20,18 +20,13 @@ max-width: 385px;
   padding-top: 0;
 }
 
-.form__label_checkbox-text {
-  padding: 0 0 0 12px;
-  font-weight: 500;
-}
-
 .form__input {
   padding: 15px 0 15px 16px;
   font-size: 20px;
   line-height: 30px;
   box-sizing: border-box;
   border-width: 1px;
-  border-radius: 2%;
+  border-radius: 2px;
   border-color: #838383;
   border-style: solid;
 }
@@ -59,4 +54,8 @@ max-width: 385px;
   border-radius: 2px;
   width: 20px;
   height: 20px;
+}
+
+.form__checkbox_padding_left {
+  padding: 0 0 0 12px;
 }
