--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -30,7 +30,7 @@
 
 .recipes__videos {
   margin: auto;
-  padding-bottom: 215px;
+  padding: 0 0 215px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 40px;
