--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,5 @@
 .header {
-  padding: 30px 80px;
+  padding: 30px 80px 40px;
   max-width: 1600px;
   display: flex;
   flex-direction: column;
@@ -14,16 +14,16 @@
 }
 
 .header__title {
- margin: 183px 0 0;
- max-width: 729px;
- font-family: "Inter", Arial, sans-serif;
- font-weight: 500;
- font-size: 60px;
- font-style: normal;
- line-height: 72px;
- letter-spacing: -0.6px;
- color:#000;
- z-index: 1;
+  margin: 183px 0 0;
+  max-width: 729px;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 500;
+  font-size: 60px;
+  font-style: normal;
+  line-height: 72px;
+  letter-spacing: -0.6px;
+  color: #000;
+  z-index: 1;
 }
 
 .header__span-accent {
