--- a/blocks/form.css
+++ b/blocks/form.css
@@ -3,7 +3,7 @@
 }
 
 .form__fieldset {
-  margin: 0 auto;
+  margin: 80px auto 0;
   padding: 0%;
   display: flex;
   flex-direction: column;
@@ -16,7 +16,6 @@
 }
 
 .form__label:first-of-type {
-  margin-top: 80px;
   padding-top: 0;
 }
 
@@ -26,7 +25,7 @@
   line-height: 30px;
   box-sizing: border-box;
   border-width: 1px;
-  border-radius: 2px;
+  border-radius: 4px;
   border-color: #838383;
   border-style: solid;
 }
@@ -38,6 +37,7 @@
   color: #fff;
   transition: opacity linear 0.15s;
   border-style: none;
+  border-radius: 4px;
 }
 
 .form__button:hover {
@@ -57,5 +57,6 @@
 }
 
 .form__checkbox_padding_left {
+  margin: 0;
   padding: 0 0 0 12px;
 }
