--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -13,10 +13,10 @@
 
 .nav__links {
   margin: 0;
+  padding: 0;
   display: flex;
   list-style-type: none;
   gap: 20px;
-  align-self: center;
   font-size: 16px;
   font-weight: 500;
 }
