--- a/blocks/form.css
+++ b/blocks/form.css
@@ -51,12 +51,8 @@
 }
 
 .form__checkbox {
+  margin-right: 12px;
   border-radius: 2px;
   width: 20px;
   height: 20px;
-}
-
-.form__checkbox_padding_left {
-  margin: 0;
-  padding: 0 0 0 12px;
 }
